# delim

./: Cargo.toml  README.md
.github/workflows/: ci.yml  superlinter.yml  test.yml
src/: delimited.rs  delimited_static.rs  lib.rs
